# permit0

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh.md  TODOS.md  deny.toml  docker-compose.yml  otel-collector-config.yaml  polis.yml  polis.yml.example
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-pack.md
.github/PULL_REQUEST_TEMPLATE/: new-pack.md
.github/agents/: architect.md  fixer.md  implementer.md  reviewer-arch.md  reviewer-correctness.md  reviewer-design.md  reviewer-spec.md  spec-designer.md
.github/workflows/: agent-pipeline.yml  bootstrap.yml  ci.yml
clients/gmail-mcp/: README.md  pyproject.toml
clients/gmail-mcp/permit0_gmail_mcp/: __init__.py  auth.py  gmail.py  mime.py  server.py
clients/outlook-mcp/: README.md  pyproject.toml
clients/outlook-mcp/permit0_outlook_mcp/: __init__.py  auth.py  graph.py  server.py
clients/python/: README.md  pyproject.toml
clients/python/permit0/: __init__.py  _client.py
clients/python/tests/: test_guard.py
corpora/calibration/: 001-gmail-simple-email.yaml  001-stripe-small-charge-usd.yaml  002-outlook-simple-email.yaml  002-stripe-tiny-charge-usd.yaml  003-gmail-read-message.yaml  003-stripe-medium-charge-usd.yaml  004-gmail-search.yaml  004-stripe-large-charge-usd.yaml  005-gmail-list-mailboxes.yaml  005-stripe-high-value-charge-usd.yaml  006-gmail-draft.yaml  006-stripe-extreme-charge-usd.yaml  007-gmail-archive.yaml  007-stripe-gate-boundary-charge.yaml  008-gmail-delete-single.yaml  008-stripe-charge-eur.yaml  009-gmail-mark-spam.yaml  (+69 more)
crates/permit0-agent/: Cargo.toml
crates/permit0-agent/src/: client.rs  error.rs  lib.rs  reviewer.rs  types.rs
crates/permit0-cli/: Cargo.toml
crates/permit0-cli/src/: engine_factory.rs  hook_config.rs  main.rs
crates/permit0-cli/src/cmd/: audit.rs  calibrate.rs  check.rs  digest.rs  gateway.rs  hook.rs  mod.rs  pack.rs  serve.rs
crates/permit0-cli/tests/: cli_tests.rs  pack_snapshot.rs
crates/permit0-dsl/: Cargo.toml
crates/permit0-dsl/src/: lib.rs  lockfile.rs  normalizer.rs  pack_loader.rs  pack_validate.rs  risk_executor.rs  validate.rs
crates/permit0-dsl/src/eval/: entity.rs  matcher.rs  mod.rs  parameter.rs  path.rs
crates/permit0-dsl/src/helpers/: mod.rs
crates/permit0-dsl/src/schema/: condition.rs  mod.rs  normalizer.rs  pack.rs  risk_rule.rs
crates/permit0-dsl/tests/: pack_integration.rs
crates/permit0-engine/: Cargo.toml
crates/permit0-engine/src/: context.rs  engine.rs  error.rs  lib.rs
crates/permit0-engine/src/bootstrap/: mod.rs  pipeline.rs  proposal_store.rs  types.rs
crates/permit0-engine/src/learning/: analyzer.rs  mod.rs  override_store.rs  types.rs
crates/permit0-engine/tests/: session_amplifier.rs
crates/permit0-node/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  vitest.config.js
crates/permit0-node/__tests__/: permit0.test.mjs
crates/permit0-node/src/: lib.rs
crates/permit0-normalize/: Cargo.toml
crates/permit0-normalize/src/: alias.rs  context.rs  error.rs  fallback.rs  lib.rs  registry.rs  traits.rs
crates/permit0-py/: Cargo.toml  pyproject.toml
crates/permit0-py/src/: lib.rs
crates/permit0-py/tests/: test_permit0.py
crates/permit0-scoring/: Cargo.toml
crates/permit0-scoring/src/: block_rules.rs  config.rs  constants.rs  lib.rs  scorer.rs  template.rs
crates/permit0-scoring/tests/: property_tests.proptest-regressions  property_tests.rs
crates/permit0-session/: Cargo.toml
crates/permit0-session/src/: amplifier.rs  block_rules.rs  context.rs  lib.rs  sqlite_storage.rs  storage.rs  types.rs
crates/permit0-shell-dispatch/: Cargo.toml
crates/permit0-shell-dispatch/src/: dispatcher.rs  lib.rs  parsed.rs  tokenize.rs
crates/permit0-shell-dispatch/src/yaml/: eval.rs  loader.rs  mod.rs  parser.rs  schema.rs
crates/permit0-shell-dispatch/tests/: pack_integration.rs
crates/permit0-store/: Cargo.toml
crates/permit0-store/migrations/audit/: 0001_init.sql  0002_digests.sql
crates/permit0-store/migrations/state/: 0001_init.sql  0002_policy_cache_v2.sql
crates/permit0-store/src/: lib.rs  memory.rs  pg_state.rs  policy_state.rs  policy_state_memory.rs  policy_state_sqlite.rs  sqlite.rs  traits.rs
crates/permit0-store/src/audit/: chain.rs  digest.rs  digest_writer.rs  export.rs  key_store.rs  memory_sink.rs  mod.rs  otel_sink.rs  pg_sink.rs  redactor.rs  signer.rs  sink.rs  sqlite_sink.rs  stdout_sink.rs  tee_sink.rs  types.rs
crates/permit0-token/: Cargo.toml
crates/permit0-token/src/: error.rs  lib.rs  provider.rs  types.rs
crates/permit0-token/tests/: token_tests.rs
crates/permit0-types/: Cargo.toml
crates/permit0-types/src/: catalog.rs  decision.rs  lib.rs  norm_action.rs  permission.rs  risk.rs  taxonomy.rs  tool_call.rs
crates/permit0-types/tests/: taxonomy_doc_sync.rs
crates/permit0-ui/: Cargo.toml
crates/permit0-ui/src/: approval.rs  auth.rs  dashboard_routes.rs  lib.rs  pack_routes.rs  routes.rs  server.rs  state.rs
crates/permit0-ui/src/oidc/: client.rs  config.rs  mod.rs  role_mapper.rs  routes.rs  session.rs
crates/permit0-ui/static/: index.html  packs.html
demos/: DEMO_RECORDING_GUIDE.md  demo1_app_fraud.py  demo2_card_testing.py  demo3_insider_exfiltration.py  record_demo.py  requirements.txt  run_demo.py
docs/: claude-code-integration.md  docker-quickstart.md  dsl.md  enterprise-strategy.md  installation.md  pack-contribution-guide.md  permit.md  taxonomy.md
examples/: README.md
integrations/: README.md
integrations/permit0-langgraph/: README.md  example_agent.py  pyproject.toml
integrations/permit0-langgraph/permit0_langgraph/: __init__.py  _decorator.py  _engine.py  _exceptions.py
integrations/permit0-langgraph/tests/: test_decorator.py
packs/: README.md
profiles/: fintech.profile.yaml  healthtech.profile.yaml
scripts/: bootstrap-labels.sh  build.sh  deploy.sh  detect-skills.sh  install-harnesses.sh  pipeline.sh  test-codex-hook.sh  test-managed-prefs-roundtrip.sh  test.sh
skills/: README.md  context.md
(+252 files in other folders)
