[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "permit0"
version = "0.1.0"
description = "Python SDK for permit0 — guard functions with norm-action-level policies"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
include = ["permit0*"]
