[package]
name = "permit0-dsl"
description = "YAML DSL parser, interpreter, and helpers for permit0 packs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
permit0-types = { workspace = true }
permit0-normalize = { workspace = true }
permit0-scoring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
