[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "permit0"
version = "0.1.0"
description = "Agent safety permission engine — Python bindings"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
keywords = ["agent", "safety", "permissions", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "permit0"
