[package]
name = "permit0-shell-dispatch"
description = "Parse bash commands back into their semantic tool calls (gog gmail send → email.send)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
permit0-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
permit0-dsl = { workspace = true }
permit0-normalize = { workspace = true }
