[package]
name = "permit0-store"
description = "Storage traits and implementations for permit0"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
permit0-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = "0.4"
regex = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
