[package]
name = "permit0-ui"
description = "Web dashboard for audit log viewing and human approvals"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
permit0-types = { workspace = true }
permit0-engine = { workspace = true }
permit0-store = { workspace = true }
permit0-dsl = { workspace = true }
serde_yaml = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
axum-extra = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
