[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "permit0-langgraph"
version = "0.1.0"
description = "LangGraph integration for permit0 — turn any function into a permission-governed tool"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "permit0 contributors" },
]
keywords = ["permit0", "langgraph", "langchain", "agent", "security", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "permit0>=0.1.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.2.0",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
dev = [
    "permit0-langgraph[test,langgraph]",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/permit0/permit0"
Repository = "https://github.com/permit0/permit0"
Documentation = "https://github.com/permit0/permit0/tree/main/integrations/permit0-langgraph"

[tool.hatch.build.targets.wheel]
packages = ["permit0_langgraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
